--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
 
 body {
   margin: 0;
-  background-color: rgba(199, 234, 234, 0.471);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -15,9 +14,10 @@ code {
     monospace;
 }
 
+h2,ul{
+  margin: 0;
+}
+
 li{
   list-style: none;
-}
-ul{
-  padding: 0px;
 }
